src/tests/snapshots/scl__tests__snapsnot_testing@binop.scl-3.snap
---
source: src/tests/mod.rs
expression: stdout
input_file: src/tests/sources/binop.scl
---
a + b = 30
a - b = 10
a * b = 200
a / b = 2
