src/tests/snapshots/scl__tests__snapsnot_testing@binop.scl.snap
---
source: src/tests/mod.rs
expression: checked_main_package
input_file: src/tests/sources/binop.scl
---
CheckedPackage {
    package_id: ModuleId(
        3,
    ),
    units: [
        CheckedTranslationUnit {
            procs: [
                CheckedProc {
                    name: "main",
                    type_id: TypeId(
                        9,
                    ),
                    body: CheckedBlock {
                        stmts: [
                            VariableDeclaration {
                                stack_slot: StackSlotId(
                                    0,
                                ),
                                value: CheckedExpr {
                                    type_id: TypeId(
                                        2,
                                    ),
                                    lvalue: false,
                                    kind: Number(
                                        20,
                                    ),
                                },
                            },
                            VariableDeclaration {
                                stack_slot: StackSlotId(
                                    1,
                                ),
                                value: CheckedExpr {
                                    type_id: TypeId(
                                        2,
                                    ),
                                    lvalue: false,
                                    kind: Number(
                                        10,
                                    ),
                                },
                            },
                            Expr(
                                CheckedExpr {
                                    type_id: TypeId(
                                        3,
                                    ),
                                    lvalue: true,
                                    kind: DirectCall {
                                        name: "printf",
                                        params: [
                                            CheckedExpr {
                                                type_id: TypeId(
                                                    4,
                                                ),
                                                lvalue: false,
                                                kind: String(
                                                    "a + b = %d\\n",
                                                ),
                                            },
                                            CheckedExpr {
                                                type_id: TypeId(
                                                    2,
                                                ),
                                                lvalue: false,
                                                kind: BinOp {
                                                    lhs: CheckedExpr {
                                                        type_id: TypeId(
                                                            2,
                                                        ),
                                                        lvalue: true,
                                                        kind: StackValue(
                                                            StackSlotId(
                                                                0,
                                                            ),
                                                        ),
                                                    },
                                                    op: Add,
                                                    rhs: CheckedExpr {
                                                        type_id: TypeId(
                                                            2,
                                                        ),
                                                        lvalue: true,
                                                        kind: StackValue(
                                                            StackSlotId(
                                                                1,
                                                            ),
                                                        ),
                                                    },
                                                },
                                            },
                                        ],
                                        variadic_after: Some(
                                            1,
                                        ),
                                        stack_slot: StackSlotId(
                                            2,
                                        ),
                                    },
                                },
                            ),
                            Expr(
                                CheckedExpr {
                                    type_id: TypeId(
                                        3,
                                    ),
                                    lvalue: true,
                                    kind: DirectCall {
                                        name: "printf",
                                        params: [
                                            CheckedExpr {
                                                type_id: TypeId(
                                                    4,
                                                ),
                                                lvalue: false,
                                                kind: String(
                                                    "a - b = %d\\n",
                                                ),
                                            },
                                            CheckedExpr {
                                                type_id: TypeId(
                                                    2,
                                                ),
                                                lvalue: false,
                                                kind: BinOp {
                                                    lhs: CheckedExpr {
                                                        type_id: TypeId(
                                                            2,
                                                        ),
                                                        lvalue: true,
                                                        kind: StackValue(
                                                            StackSlotId(
                                                                0,
                                                            ),
                                                        ),
                                                    },
                                                    op: Subtract,
                                                    rhs: CheckedExpr {
                                                        type_id: TypeId(
                                                            2,
                                                        ),
                                                        lvalue: true,
                                                        kind: StackValue(
                                                            StackSlotId(
                                                                1,
                                                            ),
                                                        ),
                                                    },
                                                },
                                            },
                                        ],
                                        variadic_after: Some(
                                            1,
                                        ),
                                        stack_slot: StackSlotId(
                                            3,
                                        ),
                                    },
                                },
                            ),
                            Expr(
                                CheckedExpr {
                                    type_id: TypeId(
                                        3,
                                    ),
                                    lvalue: true,
                                    kind: DirectCall {
                                        name: "printf",
                                        params: [
                                            CheckedExpr {
                                                type_id: TypeId(
                                                    4,
                                                ),
                                                lvalue: false,
                                                kind: String(
                                                    "a * b = %d\\n",
                                                ),
                                            },
                                            CheckedExpr {
                                                type_id: TypeId(
                                                    2,
                                                ),
                                                lvalue: false,
                                                kind: BinOp {
                                                    lhs: CheckedExpr {
                                                        type_id: TypeId(
                                                            2,
                                                        ),
                                                        lvalue: true,
                                                        kind: StackValue(
                                                            StackSlotId(
                                                                0,
                                                            ),
                                                        ),
                                                    },
                                                    op: Multiply,
                                                    rhs: CheckedExpr {
                                                        type_id: TypeId(
                                                            2,
                                                        ),
                                                        lvalue: true,
                                                        kind: StackValue(
                                                            StackSlotId(
                                                                1,
                                                            ),
                                                        ),
                                                    },
                                                },
                                            },
                                        ],
                                        variadic_after: Some(
                                            1,
                                        ),
                                        stack_slot: StackSlotId(
                                            4,
                                        ),
                                    },
                                },
                            ),
                            Expr(
                                CheckedExpr {
                                    type_id: TypeId(
                                        3,
                                    ),
                                    lvalue: true,
                                    kind: DirectCall {
                                        name: "printf",
                                        params: [
                                            CheckedExpr {
                                                type_id: TypeId(
                                                    4,
                                                ),
                                                lvalue: false,
                                                kind: String(
                                                    "a / b = %d\\n",
                                                ),
                                            },
                                            CheckedExpr {
                                                type_id: TypeId(
                                                    2,
                                                ),
                                                lvalue: false,
                                                kind: BinOp {
                                                    lhs: CheckedExpr {
                                                        type_id: TypeId(
                                                            2,
                                                        ),
                                                        lvalue: true,
                                                        kind: StackValue(
                                                            StackSlotId(
                                                                0,
                                                            ),
                                                        ),
                                                    },
                                                    op: Divide,
                                                    rhs: CheckedExpr {
                                                        type_id: TypeId(
                                                            2,
                                                        ),
                                                        lvalue: true,
                                                        kind: StackValue(
                                                            StackSlotId(
                                                                1,
                                                            ),
                                                        ),
                                                    },
                                                },
                                            },
                                        ],
                                        variadic_after: Some(
                                            1,
                                        ),
                                        stack_slot: StackSlotId(
                                            5,
                                        ),
                                    },
                                },
                            ),
                        ],
                        last: Some(
                            CheckedExpr {
                                type_id: TypeId(
                                    3,
                                ),
                                lvalue: false,
                                kind: Number(
                                    0,
                                ),
                            },
                        ),
                        type_id: TypeId(
                            3,
                        ),
                    },
                    params: [],
                    return_type: TypeId(
                        3,
                    ),
                    stack_slots: StackSlots {
                        slots: [
                            TypeId(
                                2,
                            ),
                            TypeId(
                                2,
                            ),
                            TypeId(
                                3,
                            ),
                            TypeId(
                                3,
                            ),
                            TypeId(
                                3,
                            ),
                            TypeId(
                                3,
                            ),
                        ],
                    },
                },
            ],
        },
    ],
}
