src/tests/snapshots/scl__tests__snapsnot_testing@proc_return_implicit.scl-4.snap
---
source: src/tests/mod.rs
expression: stderr
input_file: src/tests/sources/proc_return_implicit.scl
---

