src/tests/snapshots/scl__tests__snapsnot_testing@proc_return_implicit.scl-5.snap
---
source: src/tests/mod.rs
expression: run_cmd.status
input_file: src/tests/sources/proc_return_implicit.scl
---
exit status: 123
